--- a/Config/Self-Hosted.ini
+++ b/Config/Self-Hosted.ini
@@ -46,6 +46,7 @@ ruleset=📺 B站,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash
 ruleset=📺 B站,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bilibili.list
 ruleset=🤖 AI,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/refs/heads/master/Clash/Ruleset/Claude.list
 ruleset=🤖 AI,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/refs/heads/master/Clash/Ruleset/OpenAi.list
+ruleset=🤖 AI,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/refs/heads/master/Clash/Ruleset/Gemini.list
 ruleset=✈️ ‍起飞,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
 ruleset=🛩️ ‍墙内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 ruleset=🛩️ ‍墙内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
