--- a/Config/Self-Combined.ini
+++ b/Config/Self-Combined.ini
@@ -1,7 +1,7 @@
 [custom]
 ;重要！每个组名的空格后面都添加了一个隐藏字符 \u200d 用于防止与节点重名，改名需谨慎
 
-exclude_remarks=(Data Left|Remain:|Traffic:|Expir[ey]|Reset|剩[余餘]流量|流量：|[到过過效]期|[时時][间間]|重置|分割线|残り使用容量|有効期限|リセット)
+exclude_remarks=(Data Left|Remain:|Traffic:|Expir[ey]|Reset|剩[余餘]流量|流量：|[到过過效]期|[时時][间間]|重置|分割线|残り使用容量|有効期限|リセット|最新)
 
 add_emoji=true
 remove_old_emoji=false
@@ -366,15 +366,15 @@ emoji=^(?!.*[🇦-🇿]{2}).*(中[国國]|[广廣贵貴]州|深圳|北京|上海
 emoji=^(?!.*[🇦-🇿]{2}).*(?i:(?<![\da-z.])CH?N(?!\d*[a-z])|China),🇨🇳
 emoji=^(?!.*([🇦-🇿]{2}|ℹ️)).*(官.?网|官方|产品|平台|勿连|修复|恢复|更新|地址|网站|网址|域名|网域|浏览器|导航|群|裙|聊|频道|电报|飞机|扣|微信|售后|客服|工单|联系|使用|购买|续费|公告|版本|出现|没网|情况|开通|数量|注|说明|通知|去除|@|(?i:(?<![\da-z])(tg|telegram|t\.me|qq?|vx?|wx)(?!\d*[a-z]))),ℹ️
 
-custom_proxy_group=✈️ ‍起飞`select`[]👆🏻🛠️ 自建`[]🛠️ 自建`[]👆🏻🛠️🇭🇰 自建-香港`[]🛠️🇭🇰 自建-香港`[]👆🏻🛠️🇭🇰 自建-香港-Wrap`[]🛠️🇭🇰 自建-香港-Wrap`[]👆🏻🛠️🇺🇸 自建-美国`[]🛠️🇺🇸 自建-美国`[]👆🏻🛠️🇺🇸 自建-美国-Wrap`[]🛠️🇺🇸 自建-美国-Wrap`[]👆🏻🇺🇸 ‍美国`[]🇺🇸 ‍美国`[]👆🏻🎏 ‍其他`[]🎏 ‍其他`[]👆🏻🇹🇼 ‍台湾`[]🇹🇼 ‍台湾`[]👆🏻🇸🇬 ‍新加坡`[]🇸🇬 ‍新加坡`[]👆🏻🇯🇵 ‍日本`[]🇯🇵 ‍日本`[]🛩️ ‍墙内`[]👆🏻 ‍指定`[]⚡ ‍低延迟`[]DIRECT
+custom_proxy_group=✈️ ‍起飞`select`[]👆🏻🛠️ 自建`[]🛠️ 自建`[]👆🏻🛠️🇭🇰 自建-香港`[]🛠️🇭🇰 自建-香港`[]👆🏻🛠️🇭🇰 自建-香港-Wrap`[]🛠️🇭🇰 自建-香港-Wrap`[]👆🏻🛠️🇺🇸 自建-美国`[]🛠️🇺🇸 自建-美国`[]👆🏻🛠️🇺🇸 自建-美国-Wrap`[]🛠️🇺🇸 自建-美国-Wrap`[]👆🏻🇺🇸 ‍美国`[]🇺🇸 ‍美国`[]👆🏻🎏 ‍其他`[]🎏 ‍其他`[]👆🏻🇹🇼 ‍台湾`[]🇹🇼 ‍台湾`[]👆🏻🇸🇬 ‍新加坡`[]🇸🇬 ‍新加坡`[]👆🏻🇯🇵 ‍日本`[]🇯🇵 ‍日本`[]👆🏻🇨🇳 ‍中国`🇨🇳 ‍中国`[]👆🏻🇭🇰 ‍香港`[]🇭🇰 ‍香港`[]👆🏻 ‍指定`[]⚡ ‍低延迟`[]DIRECT
 
 custom_proxy_group=⚡ ‍低延迟`url-test`^`https://i.ytimg.com/generate_204`30,,100
 
 custom_proxy_group=🛩️ ‍墙内`select`[]DIRECT`[]REJECT`[]✈️ ‍起飞`[]⚡ ‍低延迟
 custom_proxy_group=💩 ‍广告`select`[]REJECT`[]🛩️ ‍墙内`[]✈️ ‍起飞`[]⚡ ‍低延迟
 
-custom_proxy_group=📺 ‍B站`select`[]🛩️ ‍墙内`[]👆🏻🇨🇳 ‍中国`🇨🇳 ‍中国`[]👆🏻🇹🇼 ‍台湾`[]🇹🇼 ‍台湾`[]👆🏻🇭🇰 ‍香港`[]🇭🇰 ‍香港`[]✈️ ‍起飞`[]⚡ ‍低延迟
-custom_proxy_group=🤖 ‍AI`select`[]👆🏻🛠️🇺🇸 自建-美国`[]🛠️🇺🇸 自建-美国`[]👆🏻🛠️🇺🇸 自建-美国-Wrap`[]🛠️🇺🇸 自建-美国-Wrap`[]👆🏻🇺🇸 ‍美国`[]🇺🇸 ‍美国`[]👆🏻🎏 ‍其他`[]🎏 ‍其他`[]👆🏻🇹🇼 ‍台湾`[]🇹🇼 ‍台湾`[]👆🏻🇸🇬 ‍新加坡`[]🇸🇬 ‍新加坡`[]👆🏻🇯🇵 ‍日本`[]🇯🇵 ‍日本`[]✈️ ‍起飞`[]👆🏻 ‍指定`[]⚡ ‍低延迟
+custom_proxy_group=📺 B站`select`[]🛩️ ‍墙内`[]👆🏻🇨🇳 ‍中国`🇨🇳 ‍中国`[]👆🏻🇹🇼 ‍台湾`[]🇹🇼 ‍台湾`[]👆🏻🇭🇰 ‍香港`[]🇭🇰 ‍香港`[]✈️ ‍起飞`[]⚡ ‍低延迟
+custom_proxy_group=🤖 AI`select`[]👆🏻🛠️🇺🇸 自建-美国`[]🛠️🇺🇸 自建-美国`[]👆🏻🛠️🇺🇸 自建-美国-Wrap`[]🛠️🇺🇸 自建-美国-Wrap`[]👆🏻🇺🇸 ‍美国`[]🇺🇸 ‍美国`[]👆🏻🎏 ‍其他`[]🎏 ‍其他`[]👆🏻🇹🇼 ‍台湾`[]🇹🇼 ‍台湾`[]👆🏻🇸🇬 ‍新加坡`[]🇸🇬 ‍新加坡`[]👆🏻🇯🇵 ‍日本`[]🇯🇵 ‍日本`[]✈️ ‍起飞`[]👆🏻 ‍指定`[]⚡ ‍低延迟
 custom_proxy_group=📚 谷歌学术`select`[]✈️ ‍起飞`[]👆🏻🛠️ 自建`[]🛠️ 自建`[]👆🏻🛠️🇭🇰 自建-香港`[]🛠️🇭🇰 自建-香港`[]👆🏻🛠️🇭🇰 自建-香港-Wrap`[]🛠️🇭🇰 自建-香港-Wrap`[]👆🏻🛠️🇺🇸 自建-美国-Wrap`[]🛠️🇺🇸 自建-美国-Wrap`[]👆🏻🇺🇸 ‍美国`[]🇺🇸 ‍美国`[]👆🏻🎏 ‍其他`[]🎏 ‍其他`[]👆🏻🇹🇼 ‍台湾`[]🇹🇼 ‍台湾`[]👆🏻🇸🇬 ‍新加坡`[]🇸🇬 ‍新加坡`[]👆🏻🇯🇵 ‍日本`[]🇯🇵 ‍日本`[]✈️ ‍起飞`[]🛩️ ‍墙内`[]👆🏻 ‍指定`[]⚡ ‍低延迟
 custom_proxy_group=🎮 Steam`select`[]✈️ ‍起飞`[]🛩️ ‍墙内`[]👆🏻🛠️ 自建`[]🛠️ 自建`[]👆🏻🛠️🇭🇰 自建-香港`[]🛠️🇭🇰 自建-香港`[]👆🏻🛠️🇭🇰 自建-香港-Wrap`[]🛠️🇭🇰 自建-香港-Wrap`[]👆🏻🛠️🇺🇸 自建-美国`[]🛠️🇺🇸 自建-美国`[]👆🏻🛠️🇺🇸 自建-美国-Wrap`[]🛠️🇺🇸 自建-美国-Wrap`[]👆🏻🇺🇸 ‍美国`[]🇺🇸 ‍美国`[]👆🏻🎏 ‍其他`[]🎏 ‍其他`[]👆🏻🇹🇼 ‍台湾`[]🇹🇼 ‍台湾`[]👆🏻🇸🇬 ‍新加坡`[]🇸🇬 ‍新加坡`[]👆🏻🇯🇵 ‍日本`[]🇯🇵 ‍日本`[]✈️ ‍起飞`[]🛩️ ‍墙内`[]👆🏻 ‍指定`[]⚡ ‍低延迟`[]DIRECT
 custom_proxy_group=🎮 Epic`select`[]✈️ ‍起飞`[]🛩️ ‍墙内`[]👆🏻🛠️ 自建`[]🛠️ 自建`[]👆🏻🛠️🇭🇰 自建-香港`[]🛠️🇭🇰 自建-香港`[]👆🏻🛠️🇭🇰 自建-香港-Wrap`[]🛠️🇭🇰 自建-香港-Wrap`[]👆🏻🛠️🇺🇸 自建-美国`[]🛠️🇺🇸 自建-美国`[]👆🏻🛠️🇺🇸 自建-美国-Wrap`[]🛠️🇺🇸 自建-美国-Wrap`[]👆🏻🇺🇸 ‍美国`[]🇺🇸 ‍美国`[]👆🏻🎏 ‍其他`[]🎏 ‍其他`[]👆🏻🇹🇼 ‍台湾`[]🇹🇼 ‍台湾`[]👆🏻🇸🇬 ‍新加坡`[]🇸🇬 ‍新加坡`[]👆🏻🇯🇵 ‍日本`[]🇯🇵 ‍日本`[]✈️ ‍起飞`[]🛩️ ‍墙内`[]👆🏻 ‍指定`[]⚡ ‍低延迟`[]DIRECT
