--- a/Config/Self-Hosted.ini
+++ b/Config/Self-Hosted.ini
@@ -11,6 +11,7 @@ custom_proxy_group=🤖 AI`select`[]👆🏻🛠️🇺🇸 自建-美国`[]👆
 custom_proxy_group=📚 谷歌学术`select`[]✈️ ‍起飞`[]👆🏻🛠️ 自建`[]🛠️ 自建`[]🛠️🇭🇰 自建-香港`[]🛠️🇭🇰 自建-香港-Wrap`[]🛠️🇺🇸 自建-美国-Wrap`[]👆🏻🛠️🇭🇰 自建-香港`[]👆🏻🛠️🇭🇰 自建-香港-Wrap`[]👆🏻🛠️🇺🇸 自建-美国-Wrap
 custom_proxy_group=🎮 Steam`select`[]✈️ ‍起飞`[]🛩️ ‍墙内`[]👆🏻🛠️ 自建`[]🛠️ 自建`[]🛠️🇭🇰 自建-香港`[]🛠️🇭🇰 自建-香港-Wrap`[]🛠️🇺🇸 自建-美国`[]🛠️🇺🇸 自建-美国-Wrap`[]👆🏻🛠️🇭🇰 自建-香港`[]👆🏻🛠️🇭🇰 自建-香港-Wrap`[]👆🏻🛠️🇺🇸 自建-美国`[]👆🏻🛠️🇺🇸 自建-美国-Wrap`[]⚡ ‍低延迟`[]DIRECT
 custom_proxy_group=🎮 Epic`select`[]✈️ ‍起飞`[]🛩️ ‍墙内`[]👆🏻🛠️ 自建`[]🛠️ 自建`[]🛠️🇭🇰 自建-香港`[]🛠️🇭🇰 自建-香港-Wrap`[]🛠️🇺🇸 自建-美国`[]🛠️🇺🇸 自建-美国-Wrap`[]👆🏻🛠️🇭🇰 自建-香港`[]👆🏻🛠️🇭🇰 自建-香港-Wrap`[]👆🏻🛠️🇺🇸 自建-美国`[]👆🏻🛠️🇺🇸 自建-美国-Wrap`[]⚡ ‍低延迟`[]DIRECT
+custom_proxy_group=🔎 Google`select`[]✈️ ‍起飞`[]🛩️ ‍墙内`[]👆🏻🛠️ 自建`[]🛠️ 自建`[]🛠️🇭🇰 自建-香港`[]🛠️🇭🇰 自建-香港-Wrap`[]🛠️🇺🇸 自建-美国`[]🛠️🇺🇸 自建-美国-Wrap`[]👆🏻🛠️🇭🇰 自建-香港`[]👆🏻🛠️🇭🇰 自建-香港-Wrap`[]👆🏻🛠️🇺🇸 自建-美国`[]👆🏻🛠️🇺🇸 自建-美国-Wrap`[]⚡ ‍低延迟`[]DIRECT
 custom_proxy_group=🌐 ‍未知站点`select`[]✈️ ‍起飞`[]🛩️ ‍墙内`[]💩 ‍广告`[]👆🏻🛠️ 自建`[]🛠️ 自建`[]🛠️🇭🇰 自建-香港`[]🛠️🇭🇰 自建-香港-Wrap`[]🛠️🇺🇸 自建-美国`[]🛠️🇺🇸 自建-美国-Wrap`[]👆🏻🛠️🇭🇰 自建-香港`[]👆🏻🛠️🇭🇰 自建-香港-Wrap`[]👆🏻🛠️🇺🇸 自建-美国`[]👆🏻🛠️🇺🇸 自建-美国-Wrap`[]⚡ ‍低延迟`[]DIRECT
 
 custom_proxy_group=🛠️ 自建`url-test`[]🛠️🇭🇰 自建-香港`[]🛠️🇭🇰 自建-香港-Wrap`[]🛠️🇺🇸 自建-美国`[]🛠️🇺🇸 自建-美国-Wrap`https://i.ytimg.com/generate_204`15,,100
@@ -47,6 +48,7 @@ ruleset=📺 B站,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash
 ruleset=🤖 AI,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/refs/heads/master/Clash/Ruleset/Claude.list
 ruleset=🤖 AI,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/refs/heads/master/Clash/Ruleset/OpenAi.list
 ruleset=🤖 AI,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/refs/heads/master/Clash/Ruleset/Gemini.list
+ruleset=🔎 Google,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/refs/heads/master/Clash/Ruleset/Google.list
 ruleset=✈️ ‍起飞,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
 ruleset=🛩️ ‍墙内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 ruleset=🛩️ ‍墙内,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
